[gd_scene load_steps=8 format=3 uid="uid://bfsaj8sygm80"]

[ext_resource type="Script" uid="uid://dm3o5yt6437pu" path="res://Scene/Object/spike.gd" id="1_k36me"]
[ext_resource type="Texture2D" uid="uid://cil3kquad61p7" path="res://Asset/Terrain/Trap/Spikes.png" id="2_k36me"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wl8ch"]
atlas = ExtResource("2_k36me")
region = Rect2(0, 0, 26, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7gkn"]
atlas = ExtResource("2_k36me")
region = Rect2(26, 0, 26, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_f10iq"]
atlas = ExtResource("2_k36me")
region = Rect2(52, 0, 26, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_l126p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl8ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7gkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f10iq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hlxb"]
size = Vector2(30, 42)

[node name="Spike" type="Node2D"]
script = ExtResource("1_k36me")

[node name="Spike" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l126p")
frame_progress = 0.580848

[node name="SpikeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeArea"]
shape = SubResource("RectangleShape2D_1hlxb")

[connection signal="body_entered" from="SpikeArea" to="." method="_on_spike_area_body_entered"]
[connection signal="body_exited" from="SpikeArea" to="." method="_on_spike_area_body_exited"]
